@@ -38,6 +38,7 @@ class InMemoryDocument : public LeafDocument {
 	InMemoryDocument & operator = (const InMemoryDocument &);
     public:
 	OmKey do_get_key(om_keyno keyid) const;
+	vector<OmKey> do_get_all_keys() const;
 	OmData do_get_data() const;
 };
 
