@@ -93,6 +93,7 @@ class SleepyDocument : public LeafDocument {
 
 	// Virtual methods of Leaf Document
 	OmKey do_get_key(om_keyno keyid) const;
+	vector<OmKey> do_get_all_keys() const;
 	OmData do_get_data() const;
 };
 
